# ChromaBridge

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  LICENSE.txt  QUICKSTART.md  README.md  build-installer.ps1  build.rs  build_installer.ps1
.claude/: settings.local.json
assets/: example-protanopia.json
assets/spectrums/: default.lut  deutan-protan-contrast-interlaced.json  deutan-protan-true-interlaced.json  deute-contrast-interlaced.json  deute-interlaced.json  inverted.json  normal.json  rotated.json  tritan-contrast-interlaced.json  tritan-true-interlaced.json
crates/core/: Cargo.toml
crates/core/src/: config.rs  db_config.rs  hue_mapper.rs  ipc.rs  lib.rs  logger.rs  noise.rs  spectrum.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app.rs  ipc_client.rs  logger.rs  main.rs  monitors.rs
crates/overlay/: Cargo.toml  build.rs
crates/overlay/src/: capture.rs  capture_wgc.rs  color_correct.hlsl  d3d11_renderer.rs  dcomp_overlay.rs  main.rs  monitor.rs  renderer.rs  shader.rs  shaders.hlsl  window_flags.rs
crates/tray/: Cargo.toml  build.rs
crates/tray/src/: ipc.rs  main.rs
icons/: icon.blend
installer/: installer.nsi
src/: gui.rs  hue_mapper.rs  lib.rs  logger.rs  main.rs  noise.rs  overlay.rs  shaders.hlsl  spectrum.rs  state.rs
tools/: hlsl_transpiler.py  process_spectrum.py
