[workspace]
members = [
    "crates/core",
    "crates/gui",
    "crates/overlay",
    "crates/tray",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Color Interlacer Contributors"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
crossbeam-channel = "0.5"

# GUI dependencies
egui = "0.29"
eframe = "0.29"
egui_overlay = "0.9"

# Image processing
image = "0.25"
