[workspace]

[package]
name = "chromabridge"
version = "2025.15.0"
edition = "2021"
authors = ["Color Interlacer Contributors"]

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
crossbeam-channel = "0.5"
eframe = "0.29"
egui = "0.29"
image = "0.25"
once_cell = "1.21.3"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tray-icon = "0.21.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_DirectComposition", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Graphics_Capture", "Foundation", "Win32_System_LibraryLoader", "Win32_Graphics_Direct3D_Fxc"] }

[build-dependencies]
winres = "0.1.12"
