[package]
name = "color-interlacer-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
image.workspace = true
rusqlite.workspace = true
crossbeam-channel.workspace = true
chrono = "0.4"
once_cell = "1.19"
