[package]
name = "color-interlacer-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "color-interlacer"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]

[dependencies]
color-interlacer-core = { path = "../core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4"
once_cell = "1.19"

egui.workspace = true
eframe.workspace = true
windows = { version = "0.62", features = ["Foundation", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
