[package]
name = "color-interlacer-gui"
version.workspace = true
edition.workspace = true
description = "Color Interlacer - Ultra-fast color blind assistance overlay"
authors.workspace = true

[[bin]]
name = "color-interlacer"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
color-interlacer-core = { path = "../core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4"
once_cell = "1.19"

egui.workspace = true
eframe.workspace = true
image.workspace = true
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
