[package]
name = "color-interlacer-overlay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "color-interlacer-overlay"
path = "src/main.rs"

[dependencies]
color-interlacer-core = { path = "../core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4"
once_cell = "1.19"

egui.workspace = true
egui_overlay.workspace = true
image.workspace = true
windows = { version = "0.62", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }
hudhook = "0.8.1"
glfw-passthrough = "0.55"
